@@ -1472,6 +1472,18 @@ CREATE TABLE `data_source_purge_temp` (
   COMMENT='RRD Cleaner File Repository';
 
 --
+-- Table structure for table `data_source_stats_command_cache`
+--
+
+CREATE TABLE `data_source_stats_command_cache` (
+	`local_data_id` int(10) unsigned NOT NULL DEFAULT 0,
+	`stats_command` varchar(8192) NOT NULL DEFAULT '',
+	PRIMARY KEY (`local_data_id`)) 
+	ENGINE=InnoDB 
+	ROW_FORMAT=DYNAMIC 
+	COMMENT='Holds the RRDfile Stats Commands';
+
+--
 -- Table structure for table `data_source_stats_daily`
 --
 
